Arquivo de conteúdo sobre Datas adicionado, onde é falado sobre como manipular datas em python.

--- a/releaseNotes.txt
+++ b/releaseNotes.txt
@@ -3,3 +3,4 @@ de herança/polimorfismo de classes em python 3.
 20/03/2022: Finalização do conteúdo sobre a classe que demonstra orientação a objeto, que fala de Duck Typing, Mixin, 
 métodos únicos que não precisam passar como herança o objeto inteiro. E por fim, inserção do arquivo que mostra um 
 exemplo sobre herança múltipla.
+21/03/2022: Arquivo de conteúdo sobre Datas adicionado, onde é falado sobre como manipular datas em python.
