--- a/releaseNotes.txt
+++ b/releaseNotes.txt
@@ -14,3 +14,5 @@ um json baseado no cep passado pela url.
 05/04/2022: Início do aprendizado de interface Gráfica em Python utilizando tkinter.
 28/04/2022: Projeto de interface gráfica se tornou maior que esperado e foi movido para um outro repositório, porém
 o código feito até a data da transferência foi mantido para possíveis consultas.
+01/06/2022: Exemplos de ordenação e igualdade entre objetos, além de alguns exemplos isolados do uso de enumarate e de 
+ordenação básica.
