--- a/releaseNotes.txt
+++ b/releaseNotes.txt
@@ -17,3 +17,4 @@ o código feito até a data da transferência foi mantido para possíveis consul
 01/06/2022: Exemplos de ordenação e igualdade entre objetos, além de alguns exemplos isolados do uso de enumarate e de 
 ordenação básica.
 14/06/2022: Estudo de Scraping baseado no livro "Web Scraping com python", rodando exemplos em um jupyter notebook.
+14/06/2022: Estudo sobre novo tipo de dado, set, que seria o conjunto.
