Exemplos isolados sobre uso de dict.

--- a/releaseNotes.txt
+++ b/releaseNotes.txt
@@ -18,3 +18,4 @@ o código feito até a data da transferência foi mantido para possíveis consul
 ordenação básica.
 14/06/2022: Estudo de Scraping baseado no livro "Web Scraping com python", rodando exemplos em um jupyter notebook.
 14/06/2022: Estudo sobre novo tipo de dado, set, que seria o conjunto.
+17/06/2022: Exemplos isolados sobre uso de dict.
