--- a/releaseNotes.txt
+++ b/releaseNotes.txt
@@ -20,3 +20,4 @@ ordenação básica.
 14/06/2022: Estudo sobre novo tipo de dado, set, que seria o conjunto.
 17/06/2022: Exemplos isolados sobre uso de dict.
 20/06/2022: Formatação de dados brasileiros incluida, onde foi abordado a validação de CPF.
+23/06/2022: Validação e formatação de CPF e CNPJ.
